# visual-math

./: README.md
.github/workflows/: build-visual-math-angular-ui.yaml  build-visual-math-nextjs-ui.yaml  build-visual-math-opengl.yaml  build-visual-math-vulkan.yaml
visual-math-angular-ui/: README.md  angular.json  package-lock.json  package.json
visual-math-angular-ui/src/: index.html  styles.css  webgpu.d.ts
visual-math-angular-ui/src/app/: app.css  app.html  app.routes.ts  app.spec.ts  app.ts
visual-math-nextjs-ui/: .prettierignore  README.md  jest.config.js  package-lock.json  package.json  webgpu.d.ts
visual-math-nextjs-ui/app/: globals.css  layout.tsx  page.test.tsx  page.tsx
visual-math-nextjs-ui/app/algebra/quadratic-plotter/: page-client.tsx  page.test.tsx  page.tsx  quadratic-plotter.model.test.ts  quadratic-plotter.model.ts  quadratic-plotter.renderer.ts
visual-math-nextjs-ui/app/calculus/derivative-lab/: derivative-lab.model.test.ts  derivative-lab.model.ts  derivative-lab.renderer.ts  page-client.tsx  page.test.tsx  page.tsx
visual-math-nextjs-ui/app/calculus/integral-lab/: integral-lab.model.test.ts  integral-lab.model.ts  integral-lab.renderer.ts  page-client.tsx  page.test.tsx  page.tsx
visual-math-nextjs-ui/app/calculus/limits-lab/: limits-lab.model.test.ts  limits-lab.model.ts  limits-lab.renderer.ts  page-client.tsx  page.test.tsx  page.tsx
visual-math-nextjs-ui/app/discrete-math/graph-traversal-lab/: graph-traversal-lab.model.test.ts  graph-traversal-lab.model.ts  graph-traversal-lab.renderer.ts  page-client.tsx  page.test.tsx  page.tsx
visual-math-nextjs-ui/app/geometry/triangle-explorer/: page-client.tsx  page.test.tsx  page.tsx  triangle-explorer.model.test.ts  triangle-explorer.renderer.ts
visual-math-nextjs-ui/app/linear-algebra/vector-explorer/: page-client.tsx  page.test.tsx  page.tsx  vector-explorer.model.test.ts  vector-explorer.model.ts  vector-explorer.renderer.ts
visual-math-nextjs-ui/app/multivariable-calculus/partial-derivatives-lab/: page-client.tsx  page.test.tsx  page.tsx  partial-derivatives-lab.model.test.ts  partial-derivatives-lab.model.ts  partial-derivatives-lab.renderer.ts
visual-math-nextjs-ui/app/phase-5/webgpu-compute-ripple/: page-client.tsx  page.test.tsx  page.tsx  webgpu-compute-ripple.model.test.ts  webgpu-compute-ripple.model.ts  webgpu-compute-ripple.renderer.test.ts  webgpu-compute-ripple.renderer.ts  webgpu-compute-ripple.scene.ts
visual-math-nextjs-ui/app/phase-5/webgpu-dual-pass/: page-client.tsx  page.test.tsx  page.tsx  webgpu-dual-pass.model.test.ts  webgpu-dual-pass.renderer.test.ts  webgpu-dual-pass.renderer.ts  webgpu-dual-pass.scene.ts
visual-math-nextjs-ui/app/phase-5/webgpu-foundation/: page-client.tsx  page.test.tsx  page.tsx  webgpu-foundation-scene.ts  webgpu-foundation.model.test.ts  webgpu-foundation.model.ts  webgpu-foundation.renderer.test.ts  webgpu-foundation.renderer.ts
visual-math-nextjs-ui/app/phase-5/webgpu-gradient-quad/: page-client.tsx  page.test.tsx  page.tsx  webgpu-gradient-quad.model.test.ts  webgpu-gradient-quad.renderer.test.ts  webgpu-gradient-quad.renderer.ts  webgpu-gradient-quad.scene.ts
visual-math-nextjs-ui/app/phase-5/webgpu-indexed-polygon/: page-client.tsx  page.test.tsx  page.tsx  webgpu-indexed-polygon.model.test.ts  webgpu-indexed-polygon.model.ts  webgpu-indexed-polygon.renderer.test.ts  webgpu-indexed-polygon.renderer.ts  webgpu-indexed-polygon.scene.ts
visual-math-nextjs-ui/app/phase-5/webgpu-indirect-indexed-polygon/: page-client.tsx  page.test.tsx  page.tsx  webgpu-indirect-indexed-polygon.model.test.ts  webgpu-indirect-indexed-polygon.model.ts  webgpu-indirect-indexed-polygon.renderer.test.ts  webgpu-indirect-indexed-polygon.renderer.ts  webgpu-indirect-indexed-polygon.scene.ts
visual-math-nextjs-ui/app/phase-5/webgpu-indirect-ribbon/: page-client.tsx  page.test.tsx  page.tsx  webgpu-indirect-ribbon.model.test.ts  (+3 more)
visual-math-opengl/: CMakeLists.txt  README.md
visual-math-opengl/cmake/: shader_assets.hpp.in
visual-math-opengl/include/visual_math_opengl/: gl_app.hpp  gl_program_helpers.hpp  gl_resource_helpers.hpp  gradient_triangle_scene.hpp  launch_options.hpp  renderer_configuration.hpp  scene_catalog.hpp
visual-math-opengl/shaders/: gradient_triangle.frag  gradient_triangle.vert  indexed_polygon.frag
visual-math-opengl/src/: gl_app.cpp  gl_program_helpers.cpp  gl_resource_helpers.cpp  gradient_triangle_scene.cpp  launch_options.cpp  renderer_configuration.cpp  scene_catalog.cpp  visual_math_opengl.cpp
visual-math-opengl/test/: visual_math_opengl_test.cpp
visual-math-vulkan/: CMakeLists.txt  README.md
visual-math-vulkan/include/visual_math_vulkan/: gradient_triangle_scene.hpp  launch_options.hpp  vulkan_app.hpp
visual-math-vulkan/shaders/: gradient_triangle.vert  indexed_polygon.frag
visual-math-vulkan/src/: gradient_triangle_scene.cpp  launch_options.cpp  visual_math_vulkan.cpp  vulkan_app.cpp
visual-math-vulkan/test/: visual_math_vulkan_test.cpp
(+548 files in other folders)
